# GEEController-clinte

./: .gitignore  pyproject.toml
client/: .secrets.toml  login.py  pyproject.toml  run_client.bat  send_scripyt.py  settings.toml  start_cliente.py
client/ClientGEE/: Lapig.py  cliente.py  config.py  functions.py  scripty.py
client/scripts/: ex.py
