[tool.poetry]
name = "ClientGEE"
version = "0.1.0"
description = "Clinete do Controler GEE"
authors = ["Rocha, Jairo Matos <contato@jairomr.com.br>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
loguru = "^0.5.3"
dynaconf = "^3.1.4"
earthengine-api = "^0.1.247"
click = "^8.0.1"
python-dotenv = "^0.17.1"
requests = "^2.27.1"

[tool.poetry.dev-dependencies]
ipython = "^7.24.0"
blue = "^0.9.0"
isort = "^5.10.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
